# doc2html

./: .gitignore  README.md  pyproject.toml
doc2html/: __init__.py  doc2html.py
tests/test1/: bib  lecture_covariant.tex  lecture_crystal.tex  lecture_feynman.tex  lecture_radioactivity.tex  lecture_semf.tex  main.tex
