[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2html"
dynamic = ["version"]
authors = [
    { name = "Adam Moss" },
]
description = "Convert documents to an accesible HTML website"
readme = "README.rst"
license = { file = "LICENCE.txt" }
keywords = ["html"]
requires-python = ">=3.8.0"
dependencies = [
    "jupyter-book==0.15.1", "openai>=1.7.2", "tiktoken>=0.5.2",
    "sphinx-exercise>=0.4.1", "sphinx-proof>=0.1.3", "PyMuPDF>=1.23.14",
    "pillow>=10.2.0", "roboflow>=1.1.19"
]

[tool.setuptools.dynamic]
version = { attr = "doc2html.__version__" }

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.bibtex"]

[project.scripts]
doc2html = "doc2html.doc2html:run_script"

[tool.setuptools.packages.find]
exclude = ["docs", "tests"]

